Implementando o componente de loading

--- a/src/app/modules/courses/course-detail/course-detail.component.html
+++ b/src/app/modules/courses/course-detail/course-detail.component.html
@@ -1,3 +1,4 @@
+<app-loading *ngIf="!Course"></app-loading>
 <div *ngIf="Course" class="content" fxLayout="column" fxLayout.gt-sm="row" fxLayoutAlign="start center"
   fxLayoutAlign.gt-sm="center start" fxLayoutGap="16px">
   <div fxFlex="50%" fxFlex.gt-sm="25%">
