--- a/src/app/modules/courses/new-course/new-course.component.html
+++ b/src/app/modules/courses/new-course/new-course.component.html
@@ -1,1 +1,69 @@
-<p>new-course works!</p>
+<h2 mat-dialog-title>Adicionar um curso</h2>
+<mat-horizontal-stepper linear="true" #stepper>
+  <mat-step [stepControl]="instructorFormGroup" editable="false">
+    <ng-template matStepLabel>{{stepInstructorLabel}}</ng-template>
+    <form *ngIf="!isNewInstructor" [formGroup]="instructorFormGroup" class="form">
+      <mat-form-field class="form-element">
+        <mat-label>Selecione um instrutor</mat-label>
+        <mat-select formControlName="instructor" required>
+          <mat-option *ngFor="let instructor of instructors" [value]="instructor">{{instructor.name}}</mat-option>
+        </mat-select>
+        <mat-hint class="select-instructor" (click)="newInstructor()">Não encontrou o instrutor do curso? Adicione-o ao
+          nosso banco de dados!</mat-hint>
+      </mat-form-field>
+    </form>
+    <form *ngIf="isNewInstructor" [formGroup]="instructorFormGroup" class="form">
+      <div class="form-element">
+        <span class="select-instructor" (click)="selectInstructor()">Quero voltar e escolher um instrutor</span>
+      </div>
+      <mat-form-field class="form-element">
+        <mat-label>Nome</mat-label>
+        <input matInput formControlName="name" placeholder="Nome" required>
+      </mat-form-field>
+      <mat-form-field class="form-element">
+        <mat-label>Imagem</mat-label>
+        <input matInput formControlName="image" placeholder="Link da Imagem" required>
+      </mat-form-field>
+    </form>
+    <div class="form-element">
+      <button class="button" color="primary" mat-button (click)="nextStep()" matStepperNext
+        [disabled]="instructorFormGroup.invalid">Próximo</button>
+    </div>
+  </mat-step> <!-- ATÉ AQUI OK-->
+  <mat-step [stepControl]="courseFormGroup" editable="false">
+    <form [formGroup]="courseFormGroup" class="form">
+      <ng-template matStepLabel>Curso</ng-template>
+      <mat-form-field class="form-element">
+        <mat-label>Nome</mat-label>
+        <input matInput formControlName="name" placeholder="Nome" required>
+      </mat-form-field>
+      <mat-form-field class="form-element">
+        <mat-label>Plataforma</mat-label>
+        <input matInput formControlName="platform" placeholder="Plataforma onde é disponibilizado" required>
+      </mat-form-field>
+      <mat-form-field class="form-element">
+        <mat-label>Número de Aulas</mat-label>
+        <input matInput formControlName="numberClasses" placeholder="Número de Aulas" required>
+      </mat-form-field><!-- ATÉ AQUI OK-->
+      <mat-form-field class="form-element">
+        <mat-label>Imagem</mat-label>
+        <input matInput formControlName="image" placeholder="Link da Imagem" required>
+      </mat-form-field>
+      <mat-form-field class="form-element">
+        <mat-label>Número de módulos</mat-label>
+        <input matInput formControlName="modules" placeholder="Número de módulos">
+      </mat-form-field>
+      <mat-form-field class="form-element">
+        <mat-label>Descrição</mat-label>
+        <textarea matInput formControlName="description" placeholder="Descrição" required></textarea>
+      </mat-form-field>
+      <div class="form-element">
+        <button mat-button class="button" color="primary" [mat-dialog-close]="true" [disabled]="courseFormGroup.invalid"
+          (click)="createNewCourse()">Adicionar curso</button>
+      </div>
+    </form>
+  </mat-step>
+</mat-horizontal-stepper>
+<div class="form-element">
+  <button mat-button class="button" color="warn" [mat-dialog-close]="false">Fechar</button>
+</div>
