--- a/src/app/modules/courses/course-detail/course-detail.component.html
+++ b/src/app/modules/courses/course-detail/course-detail.component.html
@@ -1,5 +1,6 @@
-<app-loading *ngIf="!Course"></app-loading>
-<div *ngIf="Course" class="content" fxLayout="column" fxLayout.gt-sm="row" fxLayoutAlign="start center"
+<app-loading *ngIf="!Course && !hasError"></app-loading>
+<app-error *ngIf="!Course && hasError"></app-error>
+<div *ngIf="Course && !hasError" class="content" fxLayout="column" fxLayout.gt-sm="row" fxLayoutAlign="start center"
   fxLayoutAlign.gt-sm="center start" fxLayoutGap="16px">
   <div fxFlex="50%" fxFlex.gt-sm="25%">
     <mat-card class="mat-elevation-z0">
