--- a/src/app/modules/courses/courses.component.html
+++ b/src/app/modules/courses/courses.component.html
@@ -1,5 +1,6 @@
-<app-loading *ngIf="!Courses"></app-loading>
-<div *ngIf="Courses" class="content" fxLayout="row wrap" fxLayoutGap="16px grid">
+<app-loading *ngIf="!Courses && !hasError"></app-loading>
+<app-error *ngIf="!Courses && hasError"></app-error>
+<div *ngIf="Courses && !hasError" class="content" fxLayout="row wrap" fxLayoutGap="16px grid">
   <div fxFlex="100%" fxFlex.xm="100%" fxFlex.sm="100%">
     <button mat-flat-button color="primary" (click)="openNewCourseModal()">Adicionar curso</button>
   </div>
