Implementando rotas, modulo e componente do instrutor

--- a/src/app/modules/navigation/navigation.component.html
+++ b/src/app/modules/navigation/navigation.component.html
@@ -5,6 +5,7 @@
     <div>
       <a mat-button [routerLink]="'/home'">Início</a>
       <a mat-button [routerLink]="'/courses'">Cursos</a>
+      <a mat-button [routerLink]="'/instructors'">Instrutores</a>
     </div>
   </mat-toolbar-row>
 </mat-toolbar>
