--- a/src/app/modules/instructor/new-instructor/new-instructor.component.html
+++ b/src/app/modules/instructor/new-instructor/new-instructor.component.html
@@ -2,7 +2,7 @@
 <mat-horizontal-stepper linear="true" #stepper>
   <mat-step [stepControl]="instructorFormGroup" editable="false">
     <ng-template matStepLabel>{{stepInstructorLabel}}</ng-template>
-    <form *ngIf="isNewInstructor" [formGroup]="instructorFormGroup" class="form">
+    <form [formGroup]="instructorFormGroup" class="form">
       <mat-form-field class="form-element">
         <mat-label>Nome</mat-label>
         <input matInput formControlName="name" placeholder="Nome" required>
