--- a/src/app/modules/courses/course-detail/course-detail.component.html
+++ b/src/app/modules/courses/course-detail/course-detail.component.html
@@ -13,6 +13,10 @@
         <div class="instructorName">{{Course.instructor.name}}</div>
       </mat-card-header>
     </mat-card>
+    <br>
+    <div class="row">
+      <button mat-mini-fab color="primary" aria-label="Atualizar filme" (click)="openUpdateCourseModal()"><mat-icon>edit</mat-icon></button>
+    </div>
   </div>
   <div fxFlex="50%" fxFlex.gt-sm="75%">
     <mat-card class="mat-elevation-z0">
