--- a/src/app/modules/courses/course-detail/course-detail.component.html
+++ b/src/app/modules/courses/course-detail/course-detail.component.html
@@ -15,7 +15,9 @@
     </mat-card>
     <br>
     <div class="row">
-      <button mat-mini-fab color="primary" aria-label="Atualizar filme" (click)="openUpdateCourseModal()"><mat-icon>edit</mat-icon></button>
+      <button mat-mini-fab color="primary" aria-label="Atualizar curso" (click)="openUpdateCourseModal()"><mat-icon>edit</mat-icon></button>
+      &nbsp;
+      <button mat-mini-fab color="warn" aria-label="Excluir curso" (click)="openConfirmModal()"><mat-icon>delete</mat-icon></button>
     </div>
   </div>
   <div fxFlex="50%" fxFlex.gt-sm="75%">
